--- a/style.css
+++ b/style.css
@@ -3,198 +3,266 @@
   https://www.joshwcomeau.com/css/custom-css-reset/
 */
 *, *::before, *::after {
-    box-sizing: border-box;
-  }
-  * {
-    margin: 0;
-  }
-  html, body {
-    height: 100%;
-  }
-  body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-  }
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-  }
-  input, button, textarea, select {
-    font: inherit;
-  }
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
-  #root, #__next {
-    isolation: isolate;
-  }
+  box-sizing: border-box;
+  /* outline: 1px white solid; */
+}
+* {
+  margin: 0;
+  /* outline: 1px brown solid; */
+}
+html, body {
+  height: 100%;
+}
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+input, button, textarea, select {
+  font: inherit;
+}
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+#root, #__next {
+  isolation: isolate;
+}
 
 :root {
-  /* primary */
-  --primary-red: hsl(0, 100%, 74%);
-  --primary-green: hsl(154, 59%, 51%);
+/* primary */
+--primary-red: hsl(0, 100%, 74%);
+--primary-green: hsl(154, 59%, 51%);
 
-  /* accent */
-  --very-blue: hsl(248, 32%, 49%);
+/* accent */
+--very-blue: hsl(248, 32%, 49%);
 
-  /* neutral */
-  --bg-dark-blue: hsl(249, 10%, 26%);
-  --bg-grayish-blue: hsl(246, 25%, 77%);
+/* neutral */
+--bg-dark-blue: hsl(249, 10%, 26%);
+--bg-grayish-blue: hsl(246, 25%, 77%);
 
-  /* dividers */
-  --light-grayish-blue: hsl(240, 5%, 91%);
-    
-  --white: hsl(0, 0%, 100%);
+/* dividers */
+--light-grayish-blue: hsl(240, 5%, 91%);
+  
+--white: hsl(0, 0%, 100%);
 
-  /* font body-copy */
-  --fs-body-copy: 16px;
+/* font body-copy */
+--fs-body-copy: 16px;
 }
 
 html {
-    font-size: var(--fs-body-copy);
+  font-size: var(--fs-body-copy);
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--primary-red);
-    background-image: url("./images/bg-intro-mobile.png");
+  font-family: 'Poppins', sans-serif;
+  background-color: var(--primary-red);
+  background-image: url("./images/bg-intro-mobile.png");
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
-    margin-top: auto;
+  padding: .5rem 0;
+  margin-top: auto;   /* to push the footer to the bottom */
 }
 
 .content {
-    margin: 0 auto;
-    /* max-width: 80ch; */
+  justify-content: center;    /* was previously margin: 0 auto, but was causing horizontal scrolling if viewport < 500px */
 }
 
 .lead-in {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    color: var(--white);
-    margin-block-start: 3rem;
-    margin-block-end: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: var(--white);
+  margin-block-start: 3rem;
+  margin-block-end: 3rem;
 }
 
 .lead-in h1 {
-    font-size: 1.7rem;
-    width: 100%;
-    max-width: 15rem;
-    margin: 0 auto;
+  font-size: 1.7rem;
+  width: 100%;
+  max-width: 15rem;
+  margin: 0 auto;
 }
 
 .lead-in p {
-    /* width: 19rem; */
-    /* max-width: 19rem; */
-    /* align-self: center; */ /* also works but almost like word processor justified */
-    font-size: 1rem;
-    text-align: center;
-    /* padding: 0 5rem; */
-    margin: 0 4rem;
-    line-height: 1.7;
+  /* width: 19rem; */
+  /* max-width: 19rem; */
+  /* align-self: center; */ /* also works but almost like word processor justified */
+  font-size: 1rem;
+  text-align: center;
+  /* padding: 0 5rem; */
+  margin: 0 4rem;
+  line-height: 1.7;
 }
 
 .try-it {
-    color: var(--white);
-    background-color: var(--very-blue);
-    /* max-width: 330px; */ /* 19rem; */
-    padding: 1rem 4rem;
-    text-align: center;
-    border-radius: .8rem;
-    font-size: .95rem;
-    font-weight: 400;
-    line-height: 1.7;
-    /* line-height: 1.5rem; */ /* value is in the reset */
-    margin: 0 5rem; /* now it's resizes dynamically */
-    margin-bottom: 1.5rem;
+  color: var(--white);
+  background-color: var(--very-blue);
+  /* max-width: 330px; */ /* 19rem; */
+  padding: 1rem 4rem;
+  text-align: center;
+  border-radius: .8rem;
+  font-size: .95rem;
+  font-weight: 400;
+  line-height: 1.7;
+  /* line-height: 1.5rem; */ /* value is in the reset */
+  margin: 0 5rem; /* now it's resizes dynamically */
+  margin-bottom: 1.5rem;
 }
 
 .try-it span {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .shadow {
-    box-shadow: 0px 7px 0px 0px hsl(249, 10%, 26%, 25%);
+  box-shadow: 0 7px 0 0 hsl(249, 10%, 26%, 25%);
 }
 
 .shadow2 {
-    box-shadow: 0px 4px 0px 0px hsl(154, 57%, 46%);
+  box-shadow: 0 4px 0 0 hsl(154, 57%, 46%);
 }
 
 .claim-trial {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    /* width: 330px; */
-    background-color: var(--white);
-    border-radius: .8rem;
-    padding: 1.5rem;
-    /* align-self: center; */
-    margin: 0 5rem; /* now it's resizes dynamically */
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  /* width: 330px; */
+  background-color: var(--white);
+  border-radius: .8rem;
+  padding: 1.5rem;
+  /* align-self: center; */
+  margin: 0 5rem; /* now it's resizes dynamically */
 }
 
-.claim-trial >input {
-    padding: 1rem;
-    font-size: .85rem;
-    font-weight: 700;
-    border: 2px solid var(--light-grayish-blue);
-    border-radius: .3rem;
-    /* margin-bottom: 1rem; */
+.claim-trial input {
+  padding: 1rem;
+  font-size: .85rem;
+  font-weight: 700;
+  border: 2px solid var(--light-grayish-blue);
+  border-radius: .3rem;
+  /* margin-bottom: 1rem; */
 }
 
 /* from https://austingil.com/how-to-build-html-forms-right-accessibility/ */
 .visually-hidden {
-    position: absolute;
-    overflow: hidden;
-    clip: rect(0 0 0 0);
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 }
 
-.claim-trial > button {
-    text-transform: uppercase;
-    font-size: .9rem;
-    font-weight: 500;
-    color: var(--white);
-    background-color: var(--primary-green);
-    border: none;
-    padding: 1rem 1rem .65rem;
-    border-radius: .3rem;
-    
+.claim-trial button {
+  text-transform: uppercase;
+  font-size: .9rem;
+  font-weight: 500;
+  color: var(--white);
+  background-color: var(--primary-green);
+  border: none;
+  padding: 1rem 1rem .65rem;
+  border-radius: .3rem;  
+}
+
+.claim-trial button:hover {
+  cursor: pointer;
 }
 
 .tos {
-    font-size: .7rem;
-    font-weight: 700;
-    /* color: var(--light-grayish-blue); */
-    padding: 0 1rem;
-    text-align: center;
-    line-height: 2;
+  font-size: .7rem;
+  font-weight: 700;
+  /* color: var(--light-grayish-blue); */
+  padding: 0 1rem;
+  text-align: center;
+  line-height: 2;
 }
 
 .tos a {
-    color: var(--primary-red);
+  color: var(--primary-red);
 }
 
 .attribution {
-  margin-top: auto;   /* not working. I want it to stay at bottom */
   font-size: 11px;
   text-align: center;
 }
+
 .attribution a { color: hsl(228, 45%, 44%); }
 
+
 @media screen and (min-width: 768px) {
-  /* content is desktop mode = 1113 x 650 px */
   body {
       background-image: url("./images/bg-intro-desktop.png");
   }
+
+  footer {
+      margin-top: 0;
+  }
   
+  .content {
+      display: flex;
+      gap: 1rem;    /* gap more later when the width is > 1000px */
+      align-items: center;
+      /* outline: 2px aquamarine solid; */
+      margin: auto 3rem auto 3rem;
+
+  }
+
+  .lead-in {
+      gap: 2rem;
+      max-width: 540px;
+      justify-content: center;
+      /* background-color: rgba(255, 255, 255, .5); */ /* for visual debugging */
+
+  }
+
+  .lead-in h1 {
+      margin: 0;
+      font-size: 2.75rem;
+      max-width: 30rem;
+  }
+
+  .lead-in p {
+      margin: 0;
+      text-align: left;
+  }
+
+  .secondary {
+      max-width: 540px;
+      /* background-color: rgba(255, 255, 255, .5); */ /* for visual debugging */
+  }
+
+  .try-it,
+  .claim-trial {
+      margin-left: 0;
+      margin-right: 0;
+      min-width: 21rem;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .content {
+      gap: 2rem;
+      margin: auto;
+  }
+
+  .claim-trial {
+      padding: 2.75rem;
+      gap: 1.5rem;
+  }
+
+  .claim-trial input {
+      padding-left: 1.75rem;
+  }
+
+  .secondary {
+      max-width: 640px;
+  }
 }
