--- a/style.css
+++ b/style.css
@@ -1,55 +1,80 @@
 /*
-  Josh's Custom CSS Reset
+  From Josh's Custom CSS Reset
   https://www.joshwcomeau.com/css/custom-css-reset/
 */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  /* outline: 1px white solid; */
+  /* outline: 2px black solid; */
 }
+
 * {
   margin: 0;
-  /* outline: 1px brown solid; */
 }
-html, body {
+
+html,
+body {
   height: 100%;
 }
+
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
-img, picture, video, canvas, svg {
+
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
-input, button, textarea, select {
+
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
-p, h1, h2, h3, h4, h5, h6 {
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
-#root, #__next {
+
+#root,
+#__next {
   isolation: isolate;
 }
 
 :root {
-/* primary */
---primary-red: hsl(0, 100%, 74%);
---primary-green: hsl(154, 59%, 51%);
+  /* primary */
+  --primary-red: hsl(0, 100%, 74%);
+  --primary-green: hsl(154, 59%, 51%);
 
-/* accent */
---very-blue: hsl(248, 32%, 49%);
+  /* accent */
+  --very-blue: hsl(248, 32%, 49%);
+  --very-green: hsl(154, 57%, 46%);
 
-/* neutral */
---bg-dark-blue: hsl(249, 10%, 26%);
---bg-grayish-blue: hsl(246, 25%, 77%);
+  /* neutral */
+  --bg-dark-blue: hsl(249, 10%, 26%);
+  --bg-dark-blue-shadow: hsl(249, 10%, 26%, 25%);
+  --bg-grayish-blue: hsl(246, 25%, 77%);
 
-/* dividers */
---light-grayish-blue: hsl(240, 5%, 91%);
-  
---white: hsl(0, 0%, 100%);
+  /* dividers */
+  --light-grayish-blue: hsl(240, 5%, 91%);
 
-/* font body-copy */
---fs-body-copy: 16px;
+  --white: hsl(0, 0%, 100%);
+
+  /* font body-copy */
+  --fs-body-copy: 16px;
 }
 
 html {
@@ -63,15 +88,23 @@ body {
 
   display: flex;
   flex-direction: column;
+  /* min-width: 375px; */
+  /* locks minimum screen width to 375px */
 }
 
 footer {
   padding: .5rem 0;
-  margin-top: auto;   /* to push the footer to the bottom */
+  margin-top: auto;
+  /* to push the footer to the bottom */
 }
 
 .content {
-  justify-content: center;    /* was previously margin: 0 auto, but was causing horizontal scrolling if viewport < 500px */
+  justify-content: center;
+  /* was previously margin: 0 auto, but was causing horizontal scrolling if viewport < 500px */
+}
+
+.center {
+  text-align: center;
 }
 
 .lead-in {
@@ -79,8 +112,7 @@ footer {
   flex-direction: column;
   gap: 1rem;
   color: var(--white);
-  margin-block-start: 3rem;
-  margin-block-end: 3rem;
+  margin-block: 3rem;
 }
 
 .lead-in h1 {
@@ -91,29 +123,24 @@ footer {
 }
 
 .lead-in p {
-  /* width: 19rem; */
-  /* max-width: 19rem; */
-  /* align-self: center; */ /* also works but almost like word processor justified */
   font-size: 1rem;
-  text-align: center;
-  /* padding: 0 5rem; */
-  margin: 0 4rem;
+  /* margin: 0 4rem; */
   line-height: 1.7;
 }
 
 .try-it {
   color: var(--white);
   background-color: var(--very-blue);
-  /* max-width: 330px; */ /* 19rem; */
+  /* max-width: 330px; */
+  /* 19rem; */
   padding: 1rem 4rem;
-  text-align: center;
   border-radius: .8rem;
   font-size: .95rem;
   font-weight: 400;
   line-height: 1.7;
-  /* line-height: 1.5rem; */ /* value is in the reset */
-  margin: 0 5rem; /* now it's resizes dynamically */
-  margin-bottom: 1.5rem;
+  /* margin: 0 5rem; */
+  /* now it's resizes dynamically */
+  /* margin-bottom: 1.5rem; */
 }
 
 .try-it span {
@@ -121,32 +148,38 @@ footer {
 }
 
 .shadow {
-  box-shadow: 0 7px 0 0 hsl(249, 10%, 26%, 25%);
+  box-shadow: 0 7px 0 0 var(--bg-dark-blue-shadow);
 }
 
 .shadow2 {
-  box-shadow: 0 4px 0 0 hsl(154, 57%, 46%);
+  box-shadow: 0 4px 0 0 var(--very-green);
 }
 
-.claim-trial {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  /* width: 330px; */
+.form {
   background-color: var(--white);
   border-radius: .8rem;
   padding: 1.5rem;
-  /* align-self: center; */
-  margin: 0 5rem; /* now it's resizes dynamically */
+  /* margin: 0 5rem; */
+  /* now it's resizes dynamically */
 }
 
-.claim-trial input {
-  padding: 1rem;
-  font-size: .85rem;
-  font-weight: 700;
-  border: 2px solid var(--light-grayish-blue);
-  border-radius: .3rem;
-  /* margin-bottom: 1rem; */
+.lead-in p,
+.try-it,
+.form {
+  margin: 0 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+@media screen and (min-width: 420px) {
+  .lead-in p {
+    margin: 0 4rem;
+  }
+
+  .try-it,
+  .form {
+    margin: 0 5rem;
+    margin-bottom: 1.5rem;
+  }
 }
 
 /* from https://austingil.com/how-to-build-html-forms-right-accessibility/ */
@@ -161,7 +194,20 @@ footer {
   padding: 0;
 }
 
-.claim-trial button {
+.form input {
+  padding: 1rem;
+  font-size: .85rem;
+  font-weight: 700;
+  border: 2px solid var(--light-grayish-blue);
+  border-radius: .3rem;
+  width: 100%;
+}
+
+.form input:focus {
+  color: hsl(0, 0%, 0%);
+}
+
+.form button {
   text-transform: uppercase;
   font-size: .9rem;
   font-weight: 500;
@@ -169,19 +215,59 @@ footer {
   background-color: var(--primary-green);
   border: none;
   padding: 1rem 1rem .65rem;
-  border-radius: .3rem;  
+  border-radius: .3rem;
+  width: 100%;
 }
 
-.claim-trial button:hover {
+.form button:hover {
   cursor: pointer;
+}
+
+.form button:active {
+  background-color: var(--very-green);
+  /* Same as the shadow */
+}
+
+.formGroup {
+  position: relative;
+  padding-bottom: 1.5rem;
+}
+
+.formGroup .icon-error {
+  width: 1.2rem;
+  position: absolute;
+  top: 1.2rem;
+  right: 1.2rem;
+}
+
+.formGroup .hidden {
+  display: none;
+  padding-bottom: 0;
+}
+
+.formGroup .error {
+  border: 2px solid var(--primary-red);
+  color: var(--primary-red);
+}
+
+.formGroup .valid {
+  border: 2px solid var(--primary-green);
+}
+
+.formGroup .errmsg {
+  position: absolute;
+  right: 0;
+  bottom: 8px;
+  color: var(--primary-red);
+  font-size: .75rem;
+  font-style: italic;
 }
 
 .tos {
   font-size: .7rem;
   font-weight: 700;
-  /* color: var(--light-grayish-blue); */
+  margin-top: 1rem;
   padding: 0 1rem;
-  text-align: center;
   line-height: 2;
 }
 
@@ -191,78 +277,78 @@ footer {
 
 .attribution {
   font-size: 11px;
-  text-align: center;
 }
 
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
 
 
 @media screen and (min-width: 768px) {
   body {
-      background-image: url("./images/bg-intro-desktop.png");
+    background-image: url("./images/bg-intro-desktop.png");
   }
 
   footer {
-      margin-top: 0;
+    margin-top: 0;
   }
-  
-  .content {
-      display: flex;
-      gap: 1rem;    /* gap more later when the width is > 1000px */
-      align-items: center;
-      /* outline: 2px aquamarine solid; */
-      margin: auto 3rem auto 3rem;
 
+  .content {
+    display: flex;
+    gap: 1.5rem;
+    /* gap more later when the width is > 1000px */
+    align-items: center;
+    margin: auto 3rem;
   }
 
   .lead-in {
-      gap: 2rem;
-      max-width: 540px;
-      justify-content: center;
-      /* background-color: rgba(255, 255, 255, .5); */ /* for visual debugging */
-
+    gap: 2rem;
+    max-width: 540px;
+    justify-content: center;
   }
 
   .lead-in h1 {
-      margin: 0;
-      font-size: 2.75rem;
-      max-width: 30rem;
+    margin: 0;
+    font-size: 3rem;
+    max-width: 30rem;
+    line-height: 1.2;
   }
 
   .lead-in p {
-      margin: 0;
-      text-align: left;
+    margin: 0;
+    text-align: left;
   }
 
   .secondary {
-      max-width: 540px;
-      /* background-color: rgba(255, 255, 255, .5); */ /* for visual debugging */
+    min-width: 375px;
+    /* background-color: rgba(255, 255, 255, .5); */
+    /* for visual debugging */
   }
 
   .try-it,
-  .claim-trial {
-      margin-left: 0;
-      margin-right: 0;
-      min-width: 21rem;
+  .form {
+    margin-left: 0;
+    margin-right: 0;
+    min-width: 21rem;
   }
 }
 
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 1200px) {
   .content {
-      gap: 2rem;
-      margin: auto;
+    gap: 3rem;
+    margin: auto;
   }
 
-  .claim-trial {
-      padding: 2.75rem;
-      gap: 1.5rem;
+  .form {
+    padding: 2.5rem;
+    gap: 1.5rem;
   }
 
-  .claim-trial input {
-      padding-left: 1.75rem;
+  .form input {
+    padding-left: 1.75rem;
   }
 
   .secondary {
-      max-width: 640px;
+    min-width: 540px;
   }
 }
